@@ -17,6 +17,9 @@ t/09setup-expected.t
 t/20attributes.t
 t/22help.t
 t/30reindex.t
+t/31generate.t
+t/32update.t
+t/33backup.t
 t/50logging.ini
 t/50logging.t
 t/52lastid.t
